# Gacha-Dailies

./: .gitignore  README.md  pyproject.toml  requirements.txt
gacha_hub/: main.py  utils.py
gacha_hub/core/: launcher.py  stats.py  tracker.py
gacha_hub/database/: models.py
gacha_hub/ui/: game_list_widget.py  icon_utils.py  main_window.py  persistence.py
gacha_hub/ui/assets/: styles.qss
tests/: test_database.py  test_launcher.py
