[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gacha-hub"
version = "0.1.0"
description = "A desktop application for managing and tracking gacha games"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PySide6>=6.6.1",
    "SQLModel>=0.0.14",
    "psutil>=5.9.8",
    "rich>=13.7.0",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 